--- a/src/main/webapp/carrinhoCliente.xhtml
+++ b/src/main/webapp/carrinhoCliente.xhtml
@@ -118,7 +118,7 @@
 			</h:panelGroup>
 			<h:panelGroup
 				rendered="#{UsePessoaBean.cliente.carrinho.item.size() == 0}">
-				<p:panel>
+				<p:panel style="min-height: 500px;">
 					<h2>Desculpe mas seu carrinho está vazio</h2>
 				</p:panel>
 			</h:panelGroup>
