--- a/src/main/webapp/finalizarCompra.xhtml
+++ b/src/main/webapp/finalizarCompra.xhtml
@@ -14,7 +14,7 @@
 	<ui:define name="tituloJanela">Finalizar Compra - Compre Seu Jogo</ui:define>
 	<ui:define name="conteudo">
 		<h:form id="form">
-			<p:panel>
+			<p:panel style="min-height: 500px;">
 				<p:growl id="growl" showDetail="true" life="1000" />
 				<div class="ui-g">
 					<div style="float: center" class="ui-g-6">
