--- a/src/main/webapp/homeAdm.xhtml
+++ b/src/main/webapp/homeAdm.xhtml
@@ -24,7 +24,7 @@
 				<div class="ui-g">
 					<div class="ui-g-7">
 						<p:dataTable id="tableVenda" var="venda"
-							value="#{vendaBean.proximasVenda()}" frame="box" rules="all"
+							value="#{vendaBean.proximasVenda()}" rows="15" frame="box" rules="all"
 							widgetVar="vendas" cellpadding="3" paginator="true"
 							paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
 				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
