--- a/src/main/webapp/pedido.xhtml
+++ b/src/main/webapp/pedido.xhtml
@@ -19,16 +19,17 @@
 			<p:panelGrid columns="2" style="width:100%"
 				columnClasses="logo,detail">
 				<p:outputPanel>
-					<h:panelGrid columns="2" cellpadding="5">
-						<h:outputText value="Número do pedido:" />
-						<p:outputLabel value="#{vendaBean.venda.id}" style="color:white" />
-
-						<h:outputText value="Valor total da venda: R$" />
-						<p:outputLabel value="#{vendaBean.venda.valor}" />
-
-						<h:outputText value="Itens:" />
-						<p:outputLabel value="#{vendaBean.venda.item.size()}" />
-						
+					<h:panelGrid columns="1" cellpadding="5">
+						<p:outputLabel value="Número do pedido: #{vendaBean.venda.id}"/>
+						<p:outputLabel value="Valor total do pedido: R$#{vendaBean.venda.valor}" />
+						<h:panelGroup rendered="#{vendaBean.venda.vendedor == null}">
+						<p:outputLabel value="Compra realizada online" />
+						</h:panelGroup>
+						<h:panelGroup rendered="#{vendaBean.venda.vendedor != null}">
+						<p:outputLabel value="Vendedor: #{vendaBean.venda.vendedor.nome}" />
+						</h:panelGroup>
+						<p:outputLabel value="Data da entrega: #{vendaBean.venda.dataEntrega}" />
+						<p:outputLabel value="Itens: #{vendaBean.venda.item.size()}" />
 					</h:panelGrid>
 				</p:outputPanel>
 			</p:panelGrid>
@@ -42,7 +43,7 @@
 							<p:rating style="padding-left:78px;" value="#{item.produto.nota}"
 								readonly="true" />
 						</div>
-						
+
 						<div style="float: center" class="ui-g-6">
 							<div style="text-align: center">
 								<p:panel>
