--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<h:outputStylesheet library="css" name="face.css" />
 	<link rel="shortcut icon" type="image/x-icon"
-		href="#{resource['imagem/logoN.png']}" />
+		href="#{resource['imagem/logoTe.png']}" />
 	<style>
 html, body {
 	margin: 0;
@@ -28,7 +28,7 @@ html, body {
 			<p:panel style="width: 1340px;height: 450px;text-align: center;">
 			<p:commandLink immediate="true" action="index.xhtml??faces-redirect=true">  
 				<p:graphicImage style="float:center ;width: 200px;height:200px;"
-					library="imagem" name="logoN.png" />
+					library="imagem" name="logoLo.png" />
 				</p:commandLink>	
 				<br />
 				<p:outputLabel styleClass="fonteLogin" value="E-mail:" />
